--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -11136,7 +11136,8 @@ p {
   min-height: 230px;
   border: 1px solid #dee2e6;
   overflow: hidden;
-  border-radius: 3px;
+
+  border-radius: 5%;
 }
 
 .service-card .body {
@@ -11191,10 +11192,12 @@ p {
   display: block;
   position: relative;
   overflow: hidden;
+  border-radius: 5%;
 }
 
 .portfolio-card .portfolio-card-img {
   width: 100%;
+  border-radius: 5%;
 }
 
 .portfolio-card .portfolio-card-overlay {
@@ -11215,6 +11218,7 @@ p {
   height: 0;
   border-radius: 50%;
   overflow: hidden;
+  border-radius: 5%;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -11387,7 +11391,7 @@ p {
   border: 1px solid #dee2e6;
   background: #fff;
   padding: 20px 20px 20px 60px;
-  border-radius: 0;
+  border-radius: 2%;
 }
 
 .testimonial-card-title {
